Corretto menu di navigazione mobile

--- a/_posts/2015-01-26-rel-5-0-1-released.md
+++ b/_posts/2015-01-26-rel-5-0-1-released.md
@@ -1,6 +1,6 @@
 ---
 layout: news_item
-title: "Rilasciata la rel. 5.0.1 del 26/01/2015"
+title: Rilasciata la rel. 5.0.1
 date: "2015-01-26 02:12:52 +0200"
 author: teopost
 version: 5.0.1
