--- a/_posts/2015-02-01-rel-5-1-1-released.md
+++ b/_posts/2015-02-01-rel-5-1-1-released.md
@@ -1,6 +1,6 @@
 ---
 layout: news_item
-title: "Rilasciata la rel. 5.1.1 del 01/02/2015"
+title: Rilasciata la rel. 5.1.1
 date: "2015-02-01 02:12:52 +0200"
 author: teopost
 version: 5.1.1
