--- a/_posts/2015-03-02-rel-5-2-15-released.md
+++ b/_posts/2015-03-02-rel-5-2-15-released.md
@@ -1,6 +1,6 @@
 ---
 layout: news_item
-title: "Rilasciata la rel. 5.2.15 del 02/03/2015"
+title: Rilasciata la rel. 5.2.15
 date: "2015-03-02 02:12:52 +0200"
 author: teopost
 version: 5.2.15
