--- a/_posts/2015-06-26-rel-18.2.5.9-connettore-ib.md
+++ b/_posts/2015-06-26-rel-18.2.5.9-connettore-ib.md
@@ -1,6 +1,6 @@
 ---
 layout: news_item
-title: Rilasciato connettore IB 18.2.5.9
+title: Connettore IB 18.2.5.9
 date: "2015-06-26 12:07:00 +0200"
 author: teopost
 version: 18.2.5.9
@@ -8,7 +8,8 @@ categories: [connettore-ib]
 ---
 
 E' stato rilasciato il connettore di iB 18.2.5.9.
-Si tratta di un aggiornamento che riguarda l'aggiornamento automatico del connettore che, a partire da questa versione, sarà più semplice.
+
+Si tratta di un aggiornamento importante che riguarda l'aggiornamento automatico del connettore.
 
 Con la versione precedente veniva effettuato l'aggiornamento delle DLL solo se il processo Busnet.exe non era in esecuzione.
 
